<resources>

    <string name="app_name">ClassicCo</string>
    <string name="continue_text">Continue</string>
    <string name="register_text">Let\ s get started with a new account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_driver_home">DriverHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_exit">Sign out</string>
    <string name="title_activity_maps">Map</string>
    <string name="decline">Decline</string>
    <string name="permission_require">Permission Require</string>
    <string name="decline_failed">Decline Failed</string>
    <string name="decline_success">You have declined this request</string>
    <string name="token_not_found">token not found</string>
    <string name="start_driveco">Start driveco</string>
    <string name="rider_not_found">Rider not Found</string>
    <string name="accept_failed">Not Accepted</string>
    <string name="driver_arrived">Driver Arrived</string>
    <string name="your_driver_arrived">Your driver arrived</string>
    <string name="time_over">Time over</string>
    <string name="complete_trip_failed">Trip Completion failed</string>
    <string name="complete_trip_success">Thank you !! You have completed the trip</string>
    <string name="service_unavailable">service not available</string>
</resources>